Increase collapse breakpoint for navbar to make sure all items fit in

--- a/web/frontend/src/main/main.scss
+++ b/web/frontend/src/main/main.scss
@@ -182,7 +182,7 @@ footer {
     }
   }
 
-  @media (min-width: 992px) {
+  @media (min-width: 1200px) {
     padding: 0rem 1rem;
     .nav-item {
       padding: 0.5rem 0.24rem;
